dev/home/home.scss
@import '../../static/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins';
@import '../../static/scss/mixins';
@import '../../static/scss/variables';
@import '../../static/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables';

#lead {
  display: table;
  position: relative;

  a:hover,
  a:focus {
    text-decoration: none;
  }
}

#lead-content {
  display: table-cell;
  padding: 30px;
  vertical-align: middle;
}

#video,
#video-image {
  @include translate(-50%, -50%);
  background-color: #000;
  background-size: cover;
  height: auto;
  left: 50%;
  min-height: 150%;
  min-width: 150%;
  position: fixed;
  top: 50%;
  width: auto;
  z-index: -100;
}

#video {
  display: none;
}

#video-image {
  min-height: 100%;
  min-width: 100%;
}

body.ie8 #video-image {
  left: 0;
  top: 0;
}

// Homepage-specific

#impact {

  h1 {
    @include sans-serif-text();
    color: #fff;
    font-size: 120px;
    font-weight: 900;
    line-height: 1em;
    margin: 0;
    text-align: center;
    text-transform: uppercase;

    @media (max-width: $screen-xs-max) {
      font-size: 55px;
    }
  }

  a:hover,
  a:focus {
    text-decoration: none;
  }

  .subtitle {
    @include sans-serif-text();
    color: $ucf-gold;
    display: block;
    font-size: 32px;
    font-weight: 700;
    letter-spacing: 9px;
    margin: 0;
    text-align: center;
    text-transform: uppercase;

    @media (max-width: $screen-xs-max) {
      font-size: 16px;
    }
  }

  hr {
    border-bottom-color: transparent;
    border-top-color: $ucf-gold;
    border-top-width: 2px;
    margin: 3em auto;
    width: 85%;

    @media (max-width: $screen-xs-max) {
      margin: 1.3em auto;
      width: 50%;
    }
  }

  .featured-link {
    @include transition(opacity .3s ease-in);

    &.fade {
      @include transition(opacity .3s ease-in);
      opacity: .3;
    }
  }

  .alumni {
    margin-bottom: 150px;

    @media (max-width: $screen-sm-max) {
      margin-bottom: 40px;
    }
  }

  .alumni-title,
  .alumni-name {
    display: block;
    text-align: center;
  }

  .alumni-title {
    @include sans-serif-text();
    color: #fff;
    font-size: 32px;
    font-weight: 900;
    line-height: 1.1;
    text-transform: uppercase;

    @media (max-width: $screen-sm-max) {
      font-size: 18px;
    }
  }

  .alumni-name {
    @include sans-serif-text();
    color: $ucf-gold;
    font-size: 24px;
    font-style: italic;
    font-weight: 400;

    @media (max-width: $screen-sm-max) {
      font-size: 16px;
      margin-bottom: 40px;
    }
  }

  .explore {
    bottom: 10px;
    position: absolute;
    text-align: center;
    width: 100%;

    a.copy {
      @include sans-serif-text();
      color: #fff;
      font-size: 26px;
      font-weight: 700;
      text-align: center;
      text-transform: uppercase;
    }
  }

  .read-more {
    color: #fff;
    font-size: 40px;
  }

} // end #impact

